--- a/languages/en.json
+++ b/languages/en.json
@@ -1,5 +1,185 @@
 {
-    "translation": {
-        "titleAuth": "Login"
-    }
+    "titleLogin": "Login",
+    "titleForgotPass": "Forgot password",
+    "titleSignUp": "Sign Up",
+    "titleNewPass": "Enter new password",
+    "titleDeposit": "Deposit BNB WALLET",
+    "titleWithdraw": "Withdraw",
+    "titleTransfer": "Transfer",
+    "titleAccount": "Account",
+    "titleNFTMarketplace": "NFT Marketplace",
+    "titleNFTCard": "NFT Card",
+    "titleNFTVirtualMachine": "Virtual Machine",
+    "titleNFTEstate": "Real Estate NFTs",
+    "titleSetting": "Setting",
+    "titleContact": "Contact US",
+    "titleMyNFTLocation": "My NFT Location",
+    "titleMyNFTVirtualMachine": "My NFT Virtual Machine",
+    "titleMyNFTCard": "My NFT Card",
+    "titleMyNFTMarketplace": "My NFT MARKETPLACE",
+    "titleActionDeposit": "Deposit",
+    "titleHistoryCommission": "History Commission",
+    "titleHistoryTransfer": "History Transfer",
+    "titleHistoryReceiver": "History Receiver",
+    "titleHistoryEarning": "History Earning",
+    "titleHistoryProfit": "History Profit",
+
+    "bottomTabWallet": "Wallet",
+    "bottomTabNFT": "NFT",
+    "bottomTabSwap": "Swap",
+    "bottomTabSetting": "Setting",
+
+    "placeholderEmail": "Email address",
+    "placeholderConfirmEmail": "Confirm Email address",
+    "placeholderPass": "Login password",
+    "placeholderConfirmPass": "Confirm Login password",
+    "placeholderUsername": "Username",
+    "placeholderCountry": "Country",
+    "placeholderReferral": "Referral ID",
+    "placeholderProvince": "Province",
+    "placeholderCategory": "Category",
+    "placeholderFeatures": "Features",
+    "placeholderAddress": "Address",
+    "placeholderAmount": "Amount of USDT.BEP20",
+    "placeholderNoteWallet":  "Wallet USDT.BEP20 - Note *",
+    "placeholderEnterKeyword": "Enter keyword",
+    "placeholderNation": "Nation",
+    "placeholderFirstname": "Firstname",
+    "placeholderLastname": "Lastname",
+    "placeholderPassport": "Passport",
+    "placeholderTitleReview": "Title of your review",
+    "placeholderMessage": "Message",
+
+    "placeBeautiful": "Beautiful place!",
+    "experience": "Describe your experience",
+    "textBtnSubmit": "Submit",
+    "noAccount": "Don’t have an account?",
+    "rules": "You agree with Terms of Service and Privacy Policy by To Earn Now",
+    "signUpOther": "Or Sign Up with",
+    "alreadyAccount": "Do you already have an account?",
+    "loginNow": "LOG IN NOW ",
+    "available": "Available",
+    "detailBalance": "Detail Balance",
+    "claim": "Claim",
+    "itFree": "It’s free!",
+    "shareLink": "Share your link NOW and Let’s grow together!",
+    "btnGetNow": "Get NOW",
+    "btnEarningNow": "Start Earning NOW",
+    "gotoShop": "Go to Shop",
+    "postTitleEstate": "NFT Real Estate",
+    "headingCommissionAccount": "Commission",
+    "headingBalanceAccount": "Balance",
+    "headingInterestAccount": "Interest",
+    "headingSaleAccount": "Sale",
+    "headingNOWAccount": "NOW",
+    "directAccount": "Direct",
+    "indirectAccount": "Indirect",
+    "systemAccount": "System",
+    "totalFreeCoins": "Total free earning coins",
+    "totalProfitAndCommission": "Total profit and commission coins",
+    "systemCommission": "System commission",
+    "netProfit": "Net profit",
+    "personalSales": "Personal sales",
+    "systemSales": "System sales",
+    "totalProfit": "Total profit",
+    "totalNumber": "Total member",
+    "totalPurchased": "Total locations purchased",
+    "totalCard": "Total NFT card",
+    "totalVirtualMachine": "Total Virtual Machine",
+    "totalEarned": "Total locations earned",
+    "subTitleEstate": " (to be sold as Real Estate NFT with exact longitude and latitude)",
+    "newMint": "Mint a new location NFT",
+    "newMintDescription": "NFT are unique in terms of their traits, making them perfect for representing rare items such as real properties.  It cannot be divided, duplicated, or increased in quantity.  There can only be limited amount of each type.  Thus, the value of each NFT to be increased for the following timeline and maximum quantity sold whichever comes first. ",
+    "oneLocation": "1 Location NFT",
+    "buyNFT": "Buy NFT",
+    "buyNow": "Buy now",
+    "buyMore": "Buy more",
+    "subTitleDeposit": "Please send BNB BEP20",
+    "btnCopyAddress": "Copy Address",
+    "btnSaveQR": "Save QR Code",
+    "depositDescription": "Your transaction will be completed once it is confirmed by the blockchain network. Confirmation time can vary and depends on the fee transaction.",
+    "maxAvailable": "Max available",
+    "depositWithdraw": "The overhead fees are not fixed, subject to change depending on the state of the blockchain networks Estimated completion time: 2 minutes",
+    "sender": "Sender",
+    "receiver": "Receiver ",
+    "choice": "Choice ",
+    "nftDescription": "Earn your NFT items and trade them on the marketplace to make money ",
+    "classicCard":"Classic NFT Card",
+    "golCard":"Classic NFT Gol",
+    "virtualSilver": "Virtual Silver",
+    "virtualGold": "Virtual Gold",
+    "virtualPlatinum": "Virtual Platinum",
+    "virtualVIP": "Virtual VIP",
+    "subTitleSwap": "Trade tokens in an instant",
+    "preSale": "Pre-sale ICO SWB",
+    "welcome": "Welcome DEMO5",
+    "referralLink": "Referral link",
+    "referralCode": "Referral code",
+    "promotion": "Promotion",
+    "listing": "Listing",
+    "characters": "Security 12 Characters",
+    "security": "Security",
+    "security2fa": "Security 2FA",
+    "changePass": "Change Password",
+    "kyc": "KYC",
+    "language": "Language",
+    "help": "Help Center",
+    "about": "About US",
+    "logOut": "LOGOUT",
+    "authCode": "Authenticator Code",
+    "oldPass": "Old password",
+    "newPass": "New password",
+    "retypePass": "Retype password",
+    "male": "Male",
+    "female": "Female",
+    "other": "Other",
+    "uploadFront": "Upload a photo of ID card (Front)",
+    "uploadBack": "Upload a photo of ID card (Back)",
+    "uploadFace": "Upload a full face photo",
+    "earningFree": "Earning free",
+    "earningCard": "Earning Card",
+    "commissionReferral": "Commission referral",
+    "commissionLocation": "Commission Location",
+    "commissionMachine": "Commission Machine",
+    "selectCurrency": "Select a currency",
+    "nftMachine": "NFT Machine",
+    "noNFTMachine": "No Machine NFT",
+    "aboutListing": "ABOUT THIS LISTING",
+    "openHours": "Opening Hours",
+    "review": "Review",
+    "noReview": "There are no reviews yet",
+    "yourReview": "Review your experience",
+    "sendReview": "Send Review",
+    "restaurant":"Restaurant",
+
+
+    "null": "null",
+    "delivery": "Delivery",
+    "takeOut": "Take out",
+    "owner": "Owner",
+    "stage": "Stage",
+    "description": "Description ",
+    "days": "days",
+    "totalDay": "TOTAL",
+    "enabled": "Enabled",
+    "accept": "Accept",
+    "send": "Send",
+    "search": "Search",
+    "classic": "Classic",
+    "gol": "Gol",
+    "monthly": "monthly",
+    "months": "months",
+    "growth": "Growth",
+    "location": "Location",
+    "time": "Time",
+    "amount": "Amount",
+    "name": "Name",
+    "speed": "Speed",
+    "price": "Price",
+    "duration": "Duration",
+    "history": "History",
+    "sell": "SELL",
+    "empty": "Empty Data",
+    "max": "MAX",
+    "lat": "Lat"
 }
