--- a/languages/vi.json
+++ b/languages/vi.json
@@ -1,5 +1,176 @@
 {
-    "translation": {
-        "titleAuth": "Đăng Nhập"
-    }
+    "titleLogin": "Đăng nhập",
+    "titleForgotPass": "Quên mật khẩu",
+    "titleSignUp": "Đăng ký",
+    "titleNewPass": "Nhập mật khẩu mới",
+    "titleDeposit": "Nạp tiền BNB WALLET",
+    "titleWithdraw": "Rút tiền",
+    "titleTransfer": "Chuyển",
+    "titleAccount": "Tài khoản",
+    "titleNFTMarketplace": "Thị trường NFT",
+    "titleNFTCard": "Thẻ NFT",
+    "titleNFTVirtualMachine": "Máy ảo",
+    "titleNFTEstate": "NFT Bất động sản",
+    "titleSetting": "Cài đặt",
+    "titleContact": "Liên hệ với chúng tôi",
+    "titleMyNFTLocation": "Vị trí NFT của tôi",
+    "titleMyNFTVirtualMachine": "Máy ảo NFT của tôi",
+    "titleMyNFTCard": "Thẻ NFT của tôi",
+    "titleMyNFTMarketplace": "NFT MARKETPLACE của tôi",
+    "titleActionDeposit": "Tiền gửi",
+    "titleHistoryCommission": "Ủy ban Lịch sử",
+    "titleHistoryTransfer": "Chuyển lịch sử",
+    "titleHistoryReceiver": "Người nhận lịch sử",
+    "titleHistoryEarning": "Lịch sử thu nhập",
+    "titleHistoryProfit": "Lịch sử Lợi nhuận",
+
+    "bottomTabWallet": "Ví tiền",
+    "bottomTabNFT": "NFT",
+    "bottomTabSwap": "Hoán đổi",
+    "bottomTabSetting": "Cài đặt",
+
+    "placeholderEmail": "Địa chỉ email",
+    "placeholderConfirmEmail": "Xác nhận địa chỉ Email",
+    "placeholderPass": "Mật khẩu đăng nhập",
+    "placeholderConfirmPass": "Xác nhận mật khẩu đăng nhập",
+    "placeholderUsername": "Tên người dùng",
+    "placeholderCountry": "Quốc gia",
+    "placeholderReferral": "ID giới thiệu",
+    "placeholderProvince": "Tỉnh",
+    "placeholderCategory": "Thể loại",
+    "placeholderFeatures": "Tính năng",
+    "placeholderAddress": "Địa chỉ",
+    "placeholderAmount": "Số lượng USDT.BEP20",
+    "placeholderEnterKeyword": "Nhập từ khóa",
+    "placeholderNation": "Quốc gia",
+    "placeholderFirstname": "Tên",
+    "placeholderLastname": "Họ",
+    "placeholderPassport": "Hộ chiếu",
+    "placeBeautiful": "Địa điểm đẹp!",
+
+    "experience": "Mô tả kinh nghiệm của bạn",
+    "textBtnSubmit": "Gửi",
+    "noAccount": "Chưa có tài khoản?",
+    "rules": "Bạn đồng ý với Điều khoản dịch vụ và Chính sách quyền riêng tư của To Earn Now",
+    "signUpOther": "Hoặc Đăng ký với",
+    "alreadyAccount": "Bạn đã có tài khoản chưa?",
+    "loginNow": "ĐĂNG NHẬP NGAY",
+    "available": "có sẵn có sẵn",
+    "balance": "Số dư chi tiết",
+    "claimTokenFree": "Yêu cầu 500 token Miễn phí!",
+    "shareLink": "Chia sẻ liên kết của bạn NGAY BÂY GIỜ và Cùng nhau phát triển!",
+    "btnGetNow": "Nhận NGAY",
+    "btnEarningNow": "Bắt đầu kiếm NOW",
+    "gotoShop": "Đi tới Cửa hàng",
+    "postTitleEstate": "Bất động sản NFT",
+    "headingCommissionAccount": "Hoa hồng",
+    "headingBalanceAccount": "Số dư",
+    "headingInterestAccount": "Sở thích",
+    "headingSaleAccount": "Bán",
+    "headingNOWAccount": "NOW",
+    "directAccount": "Trực tiếp",
+    "indirectAccount": "Gián tiếp",
+    "systemAccount": "Hệ thống",
+    "totalFreeCoins": "Tổng số xu kiếm được miễn phí",
+    "totalProfitAndCommission": "Tổng lợi nhuận và tiền hoa hồng",
+    "systemCommission": "Hoa hồng hệ thống",
+    "netProfit": "Lợi nhuận ròng",
+    "personalSales": "Bán hàng cá nhân",
+    "systemSales": "Doanh số hệ thống",
+    "totalProfit": "Tổng lợi nhuận",
+    "totalNumber": "Tổng số thành viên",
+    "totalPurchased": "Tổng số vị trí đã mua",
+    "totalCard": "Tổng số thẻ NFT",
+    "totalVirtualMachine": "Toàn bộ máy ảo",
+    "totalEarned": "Tổng số vị trí kiếm được",
+    "subTitleEstate": " (được bán dưới dạng NFT Bất động sản với kinh độ và vĩ độ chính xác)",
+    "newMint": "Đúc một vị trí mới NFT",
+    "newMintDescription": "NFT là duy nhất về các đặc điểm của chúng, khiến chúng trở nên hoàn hảo để đại diện cho các vật phẩm quý hiếm như tài sản thực. Nó không thể được chia, nhân đôi hoặc tăng số lượng. Mỗi loại chỉ có thể có số lượng hạn chế. Do đó, giá trị của mỗi NFT sẽ được tăng lên trong thời gian sau và số lượng bán tối đa tùy theo điều kiện nào đến trước.",
+    "oneLocation": "1 Vị trí NFT",
+    "buyNFT": "Mua NFT",
+    "buyNow": "Mua ngay",
+    "buyMore": "Mua thêm",
+    "subTitleDeposit": "Vui lòng gửi BNB BEP20",
+    "btnCopyAddress": "Sao chép địa chỉ",
+    "btnSaveQR": "Lưu mã QR",
+    "depositDescription": "Giao dịch của bạn sẽ được hoàn tất sau khi được mạng chuỗi khối xác nhận. Thời gian xác nhận có thể thay đổi và phụ thuộc vào phí giao dịch.",
+    "maxAvailable:": "MaxAvailable",
+    "depositWithdraw": "Phí chung không cố định, có thể thay đổi tùy thuộc vào trạng thái của mạng chuỗi khối\nThời gian hoàn thành ước tính: 2 phút",
+    "sender:": "Người gửi",
+    "receiver": "Người nhận ",
+    "nftDescription": "Kiếm vật phẩm NFT của bạn và giao dịch chúng trên thị trường để kiếm tiền ",
+    "virtualSilver :": "Bạc ảo",
+    "virtualGold :": "Vàng ảo",
+    "virtualPlatinum :": "Bạch kim ảo",
+    "virtualVIP :": "VIP ảo",
+    "subTitleSwap": "Giao dịch token ngay lập tức",
+    "preSale": "SWB ICO bán trước",
+    "welcome": "Chào mừng DEMO5",
+    "referralLink": "Liên kết giới thiệu",
+    "referralCode": "Mã giới thiệu",
+    "promotion": "Khuyến mãi",
+    "listing": "Liệt kê",
+    "characters": "Bảo mật 12 ký tự",
+    "security": "Bảo mật",
+    "security2fa": "Bảo mật 2FA",
+    "changePass": "Thay đổi mật khẩu",
+    "kyc": "KYC",
+    "language": "Ngôn ngữ",
+    "help": "Trung tâm trợ giúp",
+    "about": "Giới thiệu về chúng tôi",
+    "logOut": "ĐĂNG XUẤT",
+    "authCode": "Mã xác thực",
+    "oldPass": "Mật khẩu cũ",
+    "newPass": "Mật khẩu mới",
+    "retypePass": "Nhập lại mật khẩu",
+    "male": "Nam",
+    "female": "Nữ",
+    "other": "Khác",
+    "uploadFront": "Tải lên ảnh chụp chứng minh nhân dân (Mặt trước)",
+    "uploadBack": "Tải lên ảnh chụp chứng minh nhân dân (Mặt sau)",
+    "uploadFace": "Tải ảnh toàn mặt lên",
+    "earningFree": "Kiếm tiền miễn phí",
+    "earningCard": "Thẻ kiếm tiền",
+    "commissionReferral": "Hoa hồng giới thiệu",
+    "commissionLocation": "Vị trí hoa hồng",
+    "commissionMachine": "Máy hoa hồng",
+    "selectCurrency": "Chọn một loại tiền tệ",
+    "nftMachine": "Máy NFT",
+    "noNFTMachine": "Không có máy NFT",
+    "aboutListing": "GIỚI THIỆU VỀ ĐIỂM ĐẾN NÀY",
+    "openHours": "Giờ mở cửa",
+    "review": "Đánh giá",
+    "noReview": "Chưa có đánh giá nào",
+    "yourReview": "Đánh giá trải nghiệm của bạn",
+    "sendReview": "Gửi đánh giá",
+    "restaurant": "Nhà hàng",
+
+    "null": "Không có",
+    "delivery": "Giao hàng",
+    "takeOut": "Mua mang về",
+    "owner": "Người sở hữu",
+    "stage": "Stage",
+    "description": "Mô tả",
+    "days": "Ngày",
+    "totalDay": "Tổng",
+    "note": "Lưu ý",
+    "enabled": "Bật",
+    "accept": "Chấp nhận",
+    "send": "Gửi",
+    "search": "Tìm kiếm",
+    "classic": "Cổ điển",
+    "gol": "Vàng",
+    "monthly": "Hàng tháng",
+    "months": "Tháng",
+    "growth": "Tăng trưởng",
+    "location": "Location",
+    "time": "Thời giản",
+    "amount": "Số tiền",
+    "name": "Tên",
+    "speed": "Tốc độ",
+    "price": "Giá",
+    "duration": "Thời Lượng",
+    "history": "Lịch Sử",
+    "sell": "BÁN",
+    "empty": "Dữ liệu trống"
 }
